--- a/mod3_solution/loader/itemsloaderindicator.template.html
+++ b/mod3_solution/loader/itemsloaderindicator.template.html
@@ -1,1 +1,8 @@
-<div class="loader"></div>
+<div class="loader">
+  <p>hello</p>
+  <ul>
+    <li ng-repeat="item in dctrl.foundItems">
+      {{item.description}}
+    </li>
+  </ul>
+</div>
